fixed issues with previous commit where white would show on fringes of page on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@
 html {
     font-family: 'BIZ UDGothic', sans-serif;
     color: white;
-    background: linear-gradient(45deg, black, #360000);
+    overflow: hidden;
+    background: linear-gradient(45deg, black, #640000);
     animation: gradient 8s ease infinite;
     background-size: 400% 400%;
     animation: fadein 3s;
@@ -20,6 +21,11 @@ p {
 
 a {
     color: inherit;
+} 
+
+img {
+    max-width: 70%;
+    max-height: 70%;
 }
 
 .flexItem {
